# GroundControlStation

./: .gitignore  CMakeLists.txt  GroundControlStation.cpp  README.md  main.cpp
resources/: resources.qrc
resources/qml/maps/: mapView.qml
resources/telemetry_data/: drone_track.json
src/: GroundControlStation.cpp  GroundControlStation.h  main.cpp
src/controller/telemetry/: telemetryController.cpp  telemetryController.h
src/controller/video_source/: fileVideoController.cpp  fileVideoController.h  videoController.cpp  videoController.h  videoFeedController.cpp  videoFeedController.h  videoFileController.cpp  videoFileController.h
src/model/telemetry/: telemetryModel.cpp  telemetryModel.h  telemetryPlayer.cpp  telemetryPlayer.h
src/model/video_source/: fileVideoModel.cpp  fileVideoModel.h  videoFeedModel.cpp  videoFeedModel.h  videoFileModel.cpp  videoFileModel.h  videoModel.cpp  videoModel.h
src/view/: mainWindow.cpp  mainWindow.h
src/view/map/: mapView.cpp  mapView.h
src/view/telemetry/: telemetryView.cpp  telemetryView.h
src/view/video/: fileVideoView.cpp  fileVideoView.h  videoFeedView.cpp  videoFeedView.h  videoFileView.cpp  videoFileView.h  videoView.cpp  videoView.h
